default/shaarli/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shaarli
  namespace: default
spec:
  serviceName: shaarli
  replicas: 1
  selector:
    matchLabels:
      app: shaarli
  template:
    metadata:
      labels:
        app: shaarli
    spec:
      volumes:
      - name: shaarli
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:shaarli
          targetPortal: 192.168.222.149
          lun: 1
          fsType: ext4
      containers:
      - name: shaarli
        image: docker.io/shaarli/shaarli:v0.12.1
        volumeMounts:
        - mountPath: /var/www/shaarli/data
          name: shaarli
          subPath: data
        - mountPath: /var/www/shaarli/cache
          name: shaarli
          subPath: cache
        ports:
        - containerPort: 80
          name: shaarli
