default/shaarli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shaarli
  namespace: default
spec:
  selector:
    app: shaarli
  ports:
  - name: shaarli
    port: 80
