default/shaarli/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shaarli
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/enable-global-auth: "false"
    external-dns.alpha.kubernetes.io/target: "lga1.desertbluffs.com"
spec:
  tls:
    - hosts:
        - n.desertbluffs.com
  rules:
    - host: n.desertbluffs.com
      http:
        paths:
          - backend:
              serviceName: shaarli
              servicePort: shaarli
